Bug #289 : alignment of "en direct"

--- a/coop_local/static/css/objects/article.less
+++ b/coop_local/static/css/objects/article.less
@@ -3,6 +3,8 @@
     h3 {
         margin-top: 0;
         text-transform: uppercase;
+        max-height: 28px;
+        overflow: hidden;
 
         a {
             color: @greydarker;
@@ -23,6 +25,8 @@
     padding: 2px 0;
     margin-bottom: 10px;
     line-height: 1.2;
+    max-height: 48px;
+    overflow: hidden;
 }
 
 .article {
